--- a/src/main/resources/templates/busquedaPropuesta.html
+++ b/src/main/resources/templates/busquedaPropuesta.html
@@ -13,7 +13,7 @@
 	<!-- Header -->
 	<header>
 		<div th:replace="fragments/navigation.html :: navBar(nombrePagina='BÚSQUEDA DE PROPUESTAS')"></div>
-		<div th:replace="fragments/navigation.html :: tagBar"></div>
+		<div th:replace="fragments/navigation.html :: tagBar(nombrePagina='BÚSQUEDA DE PROPUESTAS')"></div>
 	</header>
 	
 	<!-- Resultado busqueda de propuestas -->
