--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -4,7 +4,7 @@
 </div>
 <div th:unless="${#lists.isEmpty(resultadoBusqueda)}">
 
-<div class="w3-row-padding">
+<div class="w3-row-padding divFlex">
 
 	<div th:each="u: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
 		<div class="w3-container w3-white info divResultadoBusqueda">
