--- a/src/main/resources/templates/busquedaPerfil.html
+++ b/src/main/resources/templates/busquedaPerfil.html
@@ -13,7 +13,7 @@
 	<!-- Header -->
 	<header>
 		<div th:replace="fragments/navigation.html :: navBar(nombrePagina='BÚSQUEDA DE PERFILES')"></div>
-		<div th:replace="fragments/navigation.html :: tagBar"></div>
+		<div th:replace="fragments/navigation.html :: tagBar(nombrePagina='BÚSQUEDA DE PERFILES')"></div>
 	</header>
 
 	<!-- Resultado busqueda de perfiles -->
