--- a/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
@@ -5,7 +5,7 @@
 <div th:unless="${#lists.isEmpty(resultadoBusqueda)}">
 
 
-<div class="w3-row-padding">
+<div class="w3-row-padding divFlex">
 
 	<div th:each="prop: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
 		<div class="w3-container w3-white info divResultadoBusqueda">
