--- a/src/main/resources/static/css/valoracion.css
+++ b/src/main/resources/static/css/valoracion.css
@@ -1,13 +1,3 @@
-
-
-header{
-    background-color:#6ed1dd;
-    text-align: center;
-    top:0;
-    padding:10px;
-    margin-bottom:30px;
-}
-
 .contenedor{
 	background-color: #f9f9f9c4 !important;
     min-height: 100vh;
@@ -77,16 +67,10 @@ section{
 }
 
 
-footer{
-    background-color: black;
-    color:white;
-    text-align: center;
-    width:100%;
-    padding:10px;
-    background: rgba(0, 0, 0, 0.8);
-    position:fixed;
-    bottom: 0;
+.imgValoracion{
+	width:15em;
 }
+
 
 /*Estrellas*/
 .ec-stars-wrapper {
