Terminado valoraciones a falta de las estrellas

--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -26,6 +26,8 @@
 		<div th:replace="fragments/resultadoBusquedaContrataciones.html"> </div>
 	</div>
 	
+	<!-- Mensaje de informacion -->
+	  <p th:text="${mensaje}" id="mensajeInfo" hidden></p>
 	<!-- Footer -->
     <footer th:replace="fragments/navigation.html :: footer"></footer>
     
