--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -94,9 +94,9 @@
 
 				<button class="w3-button w3-blue tagFilter tagFilterSelected" th:attr="data-id=' ALL '">Todas</button>
 	            <button class="w3-button w3-white tagFilter" th:attr="data-id='EN_CURSO'">En curso</button>
-	            <button class="w3-button w3-white tagFilter" th:attr="data-id='EN_VALORACION'"><i class="fa fa-tshirt w3-margin-right"></i>Pendientes de valorar</button>
+	            <button class="w3-button w3-white tagFilter" th:attr="data-id='EN_VALORACION'"><i class="fa fa-tshirt w3-margin-right"></i>En valoración</button>
 	            <button class="w3-button w3-white w3-hide-small tagFilter" th:attr="data-id='FINALIZADA'"><i
-	                    class="fa fa-gamepad w3-margin-right"></i>Valoradas</button>
+	                    class="fa fa-gamepad w3-margin-right"></i>Finalizadas</button>
 	            
 			</div>
             <input type="text" placeholder="Buscar..." id="cuadroBusquedaTagBar">
