--- a/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
@@ -32,12 +32,13 @@
 						<h3><b>Descripción</b></h3>
 						<p style="line-height:25px;text-align: justify;" th:text="${c.propuesta.descripcion}"></p>
 					</div>
-					<div style="text-align:center;">
+					<div class="divFlexSpaceEvenly">
 						<button class="w3-btn btnColor w3-margin btnDetalles"
 							th:attr="data-id=${c.propuesta.id}">Detalles</button>
-							
-						<button th:if="${c.estado} eq 'EN_VALORACION'"class="w3-btn btnColor w3-margin btnValorar"
+						<div th:if="${c.estado} eq 'EN_VALORACION'" th:unless="${#lists.contains(valoradas,c.id)}">
+						<button class="w3-btn btnColor w3-margin btnValorar"
 							th:attr="data-id-propuesta=${c.propuesta.id}, data-id=${c.id}">Valorar</button>
+						</div>
 							
 					</div>
 				</div>
