--- a/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
@@ -6,7 +6,7 @@
 
 <div id="divContrataciones">
 
-	<h2 th:text="${modo}"></h2>
+	<h2 th:text="${modo}" class="w3-margin-left"></h2>
 	<div th:each="c : ${resultadoBusqueda}" class="w3-row-padding">
 		<div style="display:block;">
 			<div class="w3-third w3-container w3-margin-bottom box" style="width: 97%">
