Valoracion con estrellas

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,6 +13,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway" , sans-serif !important;}
 	font-weight: bold;
 }
 
+.inputEdad{
+	width:50%;
+	align-self:center;
+}
+
 .divFlexSpaceEvenly{
 	display:flex;
 	justify-content: space-evenly;
