--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -25,8 +25,9 @@
 			</div>
 
 			<!-- Tags -->
-			<div th:each="tag: ${u.tags}">
-				<button class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}">Tag</button>
+			
+			<div>
+				<button th:each="tag: ${#strings.listSplit(u.tags, ',')}" class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}">Tag</button>
 			</div>
 			
 			<!-- Detalles-->
