--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -20,9 +20,9 @@
 			<!-- Valoracion -->
 			<div class="score">
 				<th:block th:each="i: ${#numbers.sequence(1, u.score)}">					
-					<i class="fa fa-star w3-margin"></i>
+					<i class="fa fa-star w3-margin estrella"></i>
 				</th:block>
-				<a th:if="${(#numbers.formatInteger(#strings.substring($(u.score),2))) >= 5}" class="fa fa-star-half-alt w3-margin"></a>
+				<i th:if="${#strings.substring(u.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
 			</div>
 
 			<!-- Tags -->
