--- a/src/main/resources/templates/modals/valoracion.html
+++ b/src/main/resources/templates/modals/valoracion.html
@@ -32,11 +32,11 @@
 				<input type="number" name="puntuacion" min="0" max="5" step="0.5" required class="w3-input w3-border w3-center w3-margin-bottom">
                 <!-- Estrellas -->
                 <div class="ec-stars-wrapper">
-                    <a class="estrella far fa-star"></a>
-                    <a class="estrella far fa-star"></a>
-                    <a class="estrella far fa-star"></a>
-                    <a class="estrella far fa-star"></a>
-                    <a class="estrella far fa-star"></a>
+                    <i class="estrella far fa-star"></i>
+                    <i class="estrella far fa-star"></i>
+                    <i class="estrella far fa-star"></i>
+                    <i class="estrella far fa-star"></i>
+                    <i class="estrella far fa-star"></i>
                 </div>
             </div>
             <div class="comentario">
