--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -5,6 +5,7 @@
 <head>
     <th:block th:replace="fragments/head.html :: header" />
     <link href="css/administracion.css" rel="stylesheet" />
+    <script src="js/administracion.js" type="text/javascript"></script>
     <title>Influencing: Administración</title>
 </head>
 
@@ -20,10 +21,10 @@
         <div class="principal">
             <div class="subheader">
                 <div class="enlaces">
-                    <a href="" class="category">Influencers</a>
-                    <a href="" class="category">Empresas</a>
-                    <a href="" class="category">Propuestas</a>
-                    <a href="" class="category">Denuncias</a>
+                    <a id="influencerAdmin" class="category">Influencers</a>
+                    <a id="empresasAdmin" class="category">Empresas</a>
+                    <a id="propuestasAdmin" class="category">Propuestas</a>
+                    <a id="denunciasAdmin" class="category">Denuncias</a>
                 </div>
                 <div class="busqueda">
                     <form>
@@ -31,53 +32,24 @@
                         <input type="submit" value="Buscar" class="btnEnviar">
                     </form>
                 </div>
-				<div class="dropdown">
-					<span class="nombre-dropdown" th:text=${nombreUsuario}>Nombre administrador</span>
-					<div class="dropdown-content">
-						<div class="dropdown-element">							  
-							<p>Ultimas notificaciones</p>
-							<div class="dropdown-notificaciones" th:each="notificacion: ${notificaciones}">
-								<p th:text="${notificacion.descripcion}">Notificacion</p>
-							</div>
-							<span class="dropdown-boton"> Ver todas</span>
-						</div>
-						<div class="dropdown-element">
-							<a href="" class="dropdown-boton"> Cerrar sesion</a>
-						</div>
-					</div>
-				</div>
             </div>
             <div class="contenido">
 
                 <div class="recientes">
-                    <h3>Búsquedas recientes</h3>
-                    <ul class="profilesList" th:each="perfil:${busquedas}">
-                        <li>
-                            <div class="usuario">
-                                <div class="imagenPerfil">
-                                    <img width="50" height="50" src="img/perfilIcon.svg">
-                                </div>
-                                <div class="opcionesPerfil">
-                                    <p th:text="${perfil.nombre} - {$perfil.roles} ({$perfil.estado})"> Nombre de perfil
-                                        - Tipo perfil (no verificado)</p>
-                                    <div class="botonesAdmin">
-                                        <a href="" class="w3-btn btnColor w3-margin">Editar usuario</a>
-                                        <a href="" class="w3-btn btnColor w3-margin">Bloquear usuario</a>
-                                        <a href="" class="w3-btn btnColor w3-margin">Verificar usuario</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                    <h3>Eventos recientes</h3>
                 </div>
             </div>
         </div>
 
-    </main>
+    
+    <!-- Lista Admin -->
+    <div id="tablaAdministracion" th:replace="fragments/tablaAdmin.html"></div>
+</main>
+
     <!-- Footer -->
     <footer th:replace="fragments/navigation.html :: footer"></footer>
 
-		<div th:replace="fragments/modal.html"></div>
+	<div th:replace="fragments/modal.html"></div>
 
 </body>
 
