--- a/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
@@ -4,49 +4,65 @@
 </div>
 <div th:unless="${#lists.isEmpty(resultadoBusqueda)}">
 
-<div id="divContrataciones">
+	<div id="divContrataciones">
 
-	<h2 th:text="${modo}" class="w3-margin-left"></h2>
-	<div th:each="c : ${resultadoBusqueda}" class="w3-row-padding">
-		<div style="display:block;">
-			<div class="w3-third w3-container w3-margin-bottom box" style="width: 97%">
-				<div class="firstCol">
-					<div class="w3-third w3-container fecha divCentrado">
-					 	<p th:text="${#temporals.format(c.propuesta.fechaInicio, 'dd/MM/yyyy') + ' - ' + #temporals.format(c.propuesta.fechaFin,'dd/MM/yyyy')}">
-						<p class="negrita" th:text="${#strings.replace(c.estado,'_',' ')}"></p>
-					</div>
-					<div>
+		<h2 th:text="${modo}" class="w3-margin-left"></h2>
+		<div th:each="c : ${resultadoBusqueda}" class="w3-row-padding">
+			<div style="display:block;">
+				<div class="w3-third w3-container w3-margin-bottom box" style="width: 97%">
+					<div class="firstCol">
+						<div class="w3-third w3-container fecha divCentrado">
+
+							<!-- Fecha de la propuesta -->
+							<p th:text="${#temporals.format(c.propuesta.fechaInicio, 'dd/MM/yyyy') + ' - ' + #temporals.format(c.propuesta.fechaFin,'dd/MM/yyyy')}">
+							
+							<!-- Estado -->
+							<p class="negrita" th:text="${#strings.replace(c.estado,'_',' ')}"></p>
+						</div>
+						
+						<!-- Imagen -->
 						<img th:src="@{/propuesta/{id}/photo(id=${c.propuesta.id})}" style="width:100%">
 					</div>
-				</div>
-				<div class="info">
-					<h2><b th:text="${c.propuesta.nombre}"></b></h2>
-					<p><b>Empresa: </b></p>
-					<a th:text="${c.propuesta.empresa.nombre}"></a>
-					<p><b>Influencer: </b></p>
-					<a th:text="${c.candidato.nombre + ' '+ c.candidato.apellidos}"></a>
-				</div>
-				<div class="thirdCol">
+					<div class="info">
 
-					<div class="description">
-						<h3><b>Descripción</b></h3>
-						<p style="line-height:25px;text-align: justify;" th:text="${c.propuesta.descripcion}"></p>
+						<!-- Nombre propuesta -->
+						<h2><b th:text="${c.propuesta.nombre}"></b></h2>
+
+						<!-- Nombre empresa -->
+						<p><b>Empresa: </b></p>
+						<a th:text="${c.propuesta.empresa.nombre}"></a>
+
+						<!-- Nombre influencer -->
+						<p><b>Influencer: </b></p>
+						<a th:text="${c.candidato.nombre + ' '+ c.candidato.apellidos}"></a>
+
 					</div>
-					<div class="divFlexSpaceEvenly">
-						<button class="w3-btn btnColor w3-margin btnDetalles"
-							th:attr="data-id=${c.propuesta.id}">Detalles</button>
-						<div th:if="${c.estado} eq 'EN_VALORACION'" th:unless="${#lists.contains(valoradas,c.id)}">
-						<button class="w3-btn btnColor w3-margin btnValorar"
-							th:attr="data-id-propuesta=${c.propuesta.id}, data-id=${c.id}">Valorar</button>
+					<div class="thirdCol">
+						
+						<!-- Descripcion -->
+						<div class="description">
+							<h3><b>Descripción</b></h3>
+							<p style="line-height:25px;text-align: justify;" th:text="${c.propuesta.descripcion}"></p>
 						</div>
-							
+
+						<!-- Botones -->
+						<div class="divFlexSpaceEvenly">
+							<button class="w3-btn btnColor w3-margin btnDetalles"
+								th:attr="data-id=${c.propuesta.id}">Detalles</button>
+							<div th:if="${c.estado} eq 'EN_VALORACION'" th:unless="${#lists.contains(valoradas,c.id)}">
+							<button class="w3-btn btnColor w3-margin btnValorar"
+								th:attr="data-id-propuesta=${c.propuesta.id}, data-id=${c.id}">Valorar</button>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
 		</div>
+
 	</div>
 
-</div>
-<!-- Paginacion -->
-<div th:replace="fragments/navigation.html :: pagination"></div>
+	<!-- Paginacion -->
+	<div th:replace="fragments/navigation.html :: pagination"></div>
+
 </div>
