--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -4,40 +4,41 @@
 </div>
 <div th:unless="${#lists.isEmpty(resultadoBusqueda)}">
 
-<div class="w3-row-padding divFlex">
+	<div class="w3-row-padding divFlex">
 
-	<div th:each="u: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
-		<div class="w3-container w3-white info divResultadoBusqueda">
-			
-			<!-- Imagen-->
-			<div class="imagen" th:attr="data-id=${u.id}">
-				<img src="img/profile.png" class="w3-hover-opacity imgPerfilBusqueda">
+		<div th:each="u: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
+			<div class="w3-container w3-white info divResultadoBusqueda">
+				
+				<!-- Imagen-->
+				<div class="imagen" th:attr="data-id=${u.id}">
+					<img th:src="@{/perfil/{id}/photo(id=${u.id})}" class="w3-hover-opacity imgPerfilBusqueda">
+				</div>
+
+				<!-- Nombre Usuario -->
+				<p><b th:text="${u.nombre +' '+ u.apellidos}">Usuario</b></p>
+
+				<!-- Valoracion -->
+				<div class="score">
+					<th:block th:each="i: ${#numbers.sequence(1, u.score)}">					
+						<i class="fa fa-star w3-margin estrella"></i>
+					</th:block>
+					<i th:if="${#strings.substring(u.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
+				</div>
+
+				<!-- Tags -->
+				
+				<div>
+					<button th:each="tag: ${#strings.listSplit(u.tags, ',')}" class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}">Tag</button>
+				</div>
+				
+				<!-- Detalles-->
+				<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
+
 			</div>
-
-			<!-- Nombre Usuario -->
-			<p><b th:text="${u.nombre +' '+ u.apellidos}">Usuario</b></p>
-
-			<!-- Valoracion -->
-			<div class="score">
-				<th:block th:each="i: ${#numbers.sequence(1, u.score)}">					
-					<i class="fa fa-star w3-margin estrella"></i>
-				</th:block>
-				<i th:if="${#strings.substring(u.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
-			</div>
-
-			<!-- Tags -->
-			
-			<div>
-				<button th:each="tag: ${#strings.listSplit(u.tags, ',')}" class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}">Tag</button>
-			</div>
-			
-			<!-- Detalles-->
-			<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
-
 		</div>
 	</div>
-</div>
 
-<!-- Paginacion -->
-<div th:replace="fragments/navigation.html :: pagination"></div>
+	<!-- Paginacion -->
+	<div th:replace="fragments/navigation.html :: pagination"></div>
+	
 </div>
